# PMCSN_Project

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: CONFRONTO_VERSIONI.xlsx  Competing Risk Median Waiting Time to Deceased Donor Transplant For Registrations Listed  2003-2014.xlsx  Data_Tansplants_US.xlsx  Modello Analitico.xlsx  PATIENTS_ARRIVALS_WITH_REJECTION.csv  Tassi.xlsx  compVSincomp.xlsx  comparazioni.xlsx  grafici.xlsx  validazione.xlsx  verifica.xlsx  zenios.xlsx
data/cleaned/: Organs_Arrivals_ABO.csv  Organs_Arrivals_All.csv  Patients_Arrivals_ABO.csv  Patients_Arrivals_All.csv  Patients_Reneging_ABO.csv  Patients_Reneging_All.csv  Transplants_ABO.csv  (+1 more)
draft/: draft.c  test_suite.c
lib/: rngs.c  rvgs.c
output/: 0_activation_comp.csv  0_activation_incomp.csv  0_organs_comp.csv  0_organs_incomp.csv  0_transplant_comp.csv  0_transplant_incomp.csv  0_waiting_list_comp.csv  0_waiting_list_incomp.csv  130_activation_incomp.csv  130_organs_incomp.csv  130_transplant_incomp.csv  130_waiting_list_incomp.csv  activation_comp.csv  activation_id.csv  activation_incomp.csv  activation_real_activation_comp.csv  activation_real_activation_filtered_comp.csv  activation_real_activation_unfiltered_comp.csv  activation_real_comp.csv  activation_real_id.csv  activation_real_incomp.csv  organs_comp.csv  organs_id.csv  organs_incomp.csv  organs_real_activation_comp.csv  organs_real_activation_filtered_comp.csv  organs_real_activation_unfiltered_comp.csv  organs_real_comp.csv  organs_real_id.csv  organs_real_incomp.csv  organs_real_no_activation_comp.csv  organs_real_no_activation_filtered_comp.csv  organs_real_no_activation_unfiltered_comp.csv  res_comp.csv  res_comp.txt  res_dummy_id.csv  res_id.csv  res_id.txt  res_real_comp.csv  res_real_id.csv  (+24 more)
scripts/: abo_id_analysis.c  rates.txt
src/: allocation_algorithms.c  cleanup.c  handle_events.c  init.c  io.c  main.c  random_gen_functions.c  sim.c  simulation_fh.c  stats.c  utils.c
test/: test1.c  test_suite.c
(+165 files in other folders)
